# template

./: .env  Cargo.toml
src/: main.rs
src/routes/: index.rs
